--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,7 @@ website:
   description: "Tutorials, articles and random thoughts on AI landscape, from maths to LLM"
   navbar:
     right:
-      - text: "{{< fa address-card >}} About"
+      - text: "About"
         href: https://gkunsch.fr/
       - icon: github
         href: https://github.com/kunschg
@@ -15,7 +15,7 @@ website:
         href: https://www.linkedin.com/in/guillaume-kunsch-1146bb151/
       - icon: rss
         href: index.xml
-  page-footer: "{{< fa regular copyright >}} Copyright 2023, Guillaume Kunsch" 
+  page-footer: "Copyright 2023, Guillaume Kunsch" 
   google-analytics: "G-F7QP106X85"
 
 format:
