--- a/_quarto.yml
+++ b/_quarto.yml
@@ -42,8 +42,11 @@ website:
 
 format:
   html:
+    page-layout: article
     theme: flatly
     css: styles.css
-
+    toc: true
+    toc-depth: 2
+    toc-title: "**Sections"
 
 
